pub struct Default {}

impl Default {
    pub fn init(_bytes: &[u8]) -> Default {
        Default {}
    }
}
